--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ahooks": "^3.7.8",
     "antd": "^5.12.8",
     "dayjs": "^1.11.9",
+    "paintartisan": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0"
